<resources>
    <string name="app_name">Bluetooth monitoring</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Device</string>
    <string name="dashboard">Dashboard</string>
    <string name="summary">Summary</string>
    <string name="date">Date</string>
    <string name="activity">Activity</string>
    <string name="time">time</string>
    <string name="daily_average">Daily Average</string>
    <string name="co_8322_amount_ppm">CO₂ Amount PPM</string>
    <string name="co2">CO₂</string>

    <string name="air_quality_monitoring">Air Quality Monitoring</string>
    <string name="status_not_connected">Status: Not Connected</string>
    <string name="ok">OK</string>
    <string name="co2_levels_have_risen_above_1200_ppm">CO2 levels have risen above 1200 PPM.</string>
    <string name="high_co2_levels_detected">High CO2 Levels Detected!</string>
</resources>