<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/tools"
    android:background="@color/second_bg"
    android:orientation="vertical">

    <!-- Nav bar-->
    <LinearLayout
        android:id="@+id/menu_bar"
        android:background="@color/main_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:contentDescription="@string/activity"
            android:focusable="true"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="@color/white"
            custom:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Scrollable content -->
    <ScrollView
        android:layout_below="@id/menu_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/title"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summary"
                    android:textColor="@color/main_bg"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.051"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.238" />

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/main_bg"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.954"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.348" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity"
                    android:textColor="@color/main_bg"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.046"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_margin="15dp"
                android:id="@+id/holder"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/testdrive"
                android:backgroundTint="@color/main_bg"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:layout_width="150dp"
                    android:elevation="8dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Amount PPM"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.504"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.45" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/co2"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.516"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.19" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.504"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.832" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <!-- DonutProgress on the right side -->
                    <com.github.lzyzsd.circleprogress.DonutProgress
                        android:id="@+id/donut_progress"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.863"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.27"
                        custom:donut_finished_color="#6EA0E9"
                        custom:donut_finished_stroke_width="15dp"
                        custom:donut_inner_drawable="@drawable/ic_vector_star_black_48dp"
                        custom:donut_show_text="false"
                        custom:donut_unfinished_color="#f5f5f5"
                        custom:donut_unfinished_stroke_width="15dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/graph1_holder"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/testdrive"
                android:elevation="8dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/daily_average"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/daily_average" />

                <TextView
                    android:layout_below="@+id/daily_average"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/co_8322_amount_ppm" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/bar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="10dp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/graph2_holder"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/testdrive"
                android:elevation="8dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/hour_average"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@android:color/white"
                    android:text="Hour Average" />

                <TextView
                    android:layout_below="@+id/hour_average"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/co_8322_amount_ppm" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/bar_chart_hourly"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="10dp" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
